--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-logic-form = { path = "../logic-form" }
+fol = { path = "../fol" }
 num-bigint = "0.4.5"
 num-traits = "0.2.19"
 strum = { version = "0.26.2", features = ["derive"] }
