--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aig = "0.2.4"
+aig = { path = "../aig-rs", version = "0.3.0" }
 fol = { path = "../fol" }
 num-bigint = "0.4.5"
 num-traits = "0.2.19"
