--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 aig = { path = "../aig-rs", version = "0.3.0" }
 giputils = { path = "../giputils", version = "0.3.0" }
-fol = { path = "../fol" }
+logic-form = { path = "../logic-form", version = "0.3.3" }
 num-bigint = "0.4.5"
 num-traits = "0.2.19"
 strum = { version = "0.26.2", features = ["derive"] }
