--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ giputils = { path = "../giputils", version = "0.3.6" }
 logicrs = { path = "../logicrs", version = "0.6.1" }
 num-bigint = "0.4.5"
 num-traits = "0.2.19"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 strum = { version = "0.27.1", features = ["derive"] }
